fix the structure of the elements in css and html, now is looking more aligned - The NAV and the Header

--- a/style.css
+++ b/style.css
@@ -3,3 +3,114 @@
 body {
   font-family: 'Poppins';
 }
+
+header > div {
+    padding: 0 25px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid lightgray;
+  }
+  
+  nav {
+    width: 600px;
+  }
+  
+  nav ul {
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  
+  nav a {
+    text-decoration: none;
+    color: black;
+  }
+  
+  .blackHeart {
+    width: 20px;
+    margin-right: 1rem;
+  }
+
+
+  .slot-form  {
+    padding: 10px 32px;
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+  }
+
+  .picture {
+    width: 80px ;
+    margin-right: 8px;
+  }
+
+
+  .slot-form form {
+    width: 80%;
+    height: 48px;
+    text-align: left;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
+    align-content: center;
+    background-color: rgba(0,0,0,.05);
+  }
+
+  .m-glass {
+    width: 24px;
+    padding: 3 5 0 0;
+  }
+
+  .slot-form span {
+    display: flex;
+    align-items: center;
+    justify-self: flex-start;
+    padding: 16px;
+  }
+
+  .slot-form input {
+    font-size: 1rem;
+    padding: 8px;
+    width: 100%;
+    background-color: transparent;
+    border: none;
+  }
+
+  .search-btn  {
+    border: none;
+    background-color: #fb3e44;
+    padding: 15px;
+  }
+
+  .search-btn a {
+    color: white;
+    text-decoration: none;
+    font-size: medium;
+  }
+
+
+  .link-head a {
+    text-decoration: none;
+    color: black;
+    justify-content: space-between; 
+    font-size: medium; 
+    
+  }
+
+
+  .link-btn-join {
+ 
+   padding: 6px 12px;
+   border: 1px solid rgb(144,144,144);
+  }
+
+  .link-btn-log {
+   font-size: 1em;
+   letter-spacing: 0.2px;
+   text-align: center;
+   text-decoration: none;
+   padding: 6px 10px;
+  }
